Fix minutes bug on Firefox

--- a/front/assets/css/main.css
+++ b/front/assets/css/main.css
@@ -298,7 +298,6 @@ a:hover {
 
 .center-clock {
     margin: 0 auto;
-    width:240px;
 }
 
 .clock {
